project(TechieDelight)
cmake_minimum_required(VERSION 3.0)
#add_subdirectory(subSetSum-Partition)
#add_subdirectory(CompanyProjectProblem)
#add_subdirectory(FindSubarrayForGivenSum)
#add_subdirectory(PrintAllSubstring)
#add_subdirectory(MinimumIncrementMakeArrayUnique)
#add_subdirectory(AnagramString)
add_subdirectory(PrintAllSubstringUsingRecurssion)