project(TechieDelight)
cmake_minimum_required(VERSION 3.0)
#add_subdirectory(subSetSum-Partition)
#add_subdirectory(CompanyProjectProblem)
#add_subdirectory(FindSubarrayForGivenSum)
#add_subdirectory(PrintAllSubstring)
#add_subdirectory(MinimumIncrementMakeArrayUnique)
#add_subdirectory(AnagramString)
#add_subdirectory(PrintAllSubstringUsingRecurssion)
#add_subdirectory(KnapsackProblem)
#add_subdirectory(SubsetSumProblem)
#add_subdirectory(GenerateMaximumProbabilityAndLength)
#add_subdirectory(KthSymbolGrammar)
#add_subdirectory(SlidingWindow/FruitIntoBaskets)
#add_subdirectory(BinaryTree)
#add_subdirectory(SlidingWindow/ShrinkArrayRemovingTripletsSatisfyConstraints)
#add_subdirectory(DynamicProgamming/LargestCommonSubsequence)
#add_subdirectory(DynamicProgamming/GridProblem)
#add_subdirectory(DynamicProgamming/GridProblemDigonaly)
add_subdirectory(SlidingWindow/MaximumSumSubarrayOfSizeK)
