project(TechieDelight)
cmake_minimum_required(VERSION 3.0)
#add_subdirectory(subSetSum-Partition)
#add_subdirectory(CompanyProjectProblem)
#add_subdirectory(FindSubarrayForGivenSum)
#add_subdirectory(PrintAllSubstring)
#add_subdirectory(MinimumIncrementMakeArrayUnique)
#add_subdirectory(AnagramString)
#add_subdirectory(PrintAllSubstringUsingRecurssion)
#add_subdirectory(SubsetSumProblem)
#add_subdirectory(GenerateMaximumProbabilityAndLength)
#add_subdirectory(KthSymbolGrammar)
#add_subdirectory(SlidingWindow/FruitIntoBaskets)
#add_subdirectory(BinaryTree)
#add_subdirectory(SlidingWindow/ShrinkArrayRemovingTripletsSatisfyConstraints)
#add_subdirectory(DynamicProgamming/LargestCommonSubsequence)
#add_subdirectory(DynamicProgamming/GridProblem)
#add_subdirectory(DynamicProgamming/GridProblemDigonaly)
#add_subdirectory(SlidingWindow/MaximumSumSubarrayOfSizeK)
#add_subdirectory(SlidingWindow/FirstNegativeNumberInEveryWindowOfSizeK)
#add_subdirectory(DynamicProgamming/GridProblemWithObstacle)
#add_subdirectory(SlidingWindow/FindSubarrayForGivenSum)
#add_subdirectory(DynamicProgamming/GridProblemWithObstacle)
#add_subdirectory(ZipForVector)
#add_subdirectory(DynamicProgamming/KnapsackProblem)
#add_subdirectory(BinaryTree)
add_subdirectory(MetaHackerCup2022)